<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Question Bank -->
    <LinearLayout
        android:id="@+id/questions"
        style="@style/LinearLayoutBankStyle">

        <!-- Question 1 -->
        <LinearLayout
            android:id="@+id/q_1"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_1_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_1_header"/>

            <TextView
                android:id="@+id/q_1_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_1_question"/>

            <EditText
                android:id="@+id/q_1_answer_edit_text"
                style="@style/EditTextStyle"/>
        </LinearLayout>

        <!-- Question 2 -->
        <LinearLayout
            android:id="@+id/q_2"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_2_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_2_header"/>

            <TextView
                android:id="@+id/q_2_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_2_question"/>

            <RadioGroup
                android:id="@+id/q_2_answer_radio_group"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/q_2_radio_button_1"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_2_radio_button_answer_1"/>

                <RadioButton
                    android:id="@+id/q_2_radio_button_2"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_2_radio_button_answer_2"/>

                <RadioButton
                    android:id="@+id/q_2_radio_button_3"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_2_radio_button_answer_3"/>

                <RadioButton
                    android:id="@+id/q_2_radio_button_4"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_2_radio_button_answer_4"/>
            </RadioGroup>
        </LinearLayout>

        <!-- Question 3 -->
        <LinearLayout
            android:id="@+id/q_3"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_3_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_3_header"/>

            <TextView
                android:id="@+id/q_3_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_3_question"/>

            <CheckBox
                android:id="@+id/q_3_check_box_1"
                style="@style/CheckBoxStyle"
                android:text="@string/q_3_check_box_answer_1"/>

            <CheckBox
                android:id="@+id/q_3_check_box_2"
                style="@style/CheckBoxStyle"
                android:text="@string/q_3_check_box_answer_2"/>

            <CheckBox
                android:id="@+id/q_3_check_box_3"
                style="@style/CheckBoxStyle"
                android:text="@string/q_3_check_box_answer_3"/>

            <CheckBox
                android:id="@+id/q_3_check_box_4"
                style="@style/CheckBoxStyle"
                android:text="@string/q_3_check_box_answer_4"/>
        </LinearLayout>

        <!-- Question 4 -->
        <LinearLayout
            android:id="@+id/q_4"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_4_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_4_header"/>

            <TextView
                android:id="@+id/q_4_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_4_question"/>

            <EditText
                android:id="@+id/q_4_answer_edit_text"
                style="@style/EditTextStyle"/>

        </LinearLayout>

        <!-- Question 5 -->
        <LinearLayout
            android:id="@+id/q_5"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_5_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_5_header"/>

            <TextView
                android:id="@+id/q_5_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_5_question"/>

            <RadioGroup
                android:id="@+id/q_5_answer_radio_group"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/q_5_radio_button_1"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_5_radio_button_answer_1"/>

                <RadioButton
                    android:id="@+id/q_5_radio_button_2"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_5_radio_button_answer_2"/>

                <RadioButton
                    android:id="@+id/q_5_radio_button_3"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_5_radio_button_answer_3"/>

                <RadioButton
                    android:id="@+id/q_5_radio_button_4"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_5_radio_button_answer_4"/>
            </RadioGroup>
        </LinearLayout>

        <!-- Question 6 -->
        <LinearLayout
            android:id="@+id/q_6"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_6_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_6_header"/>

            <TextView
                android:id="@+id/q_6_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_6_question"/>

            <CheckBox
                android:id="@+id/q_6_check_box_1"
                style="@style/CheckBoxStyle"
                android:text="@string/q_6_check_box_answer_1"/>

            <CheckBox
                android:id="@+id/q_6_check_box_2"
                style="@style/CheckBoxStyle"
                android:text="@string/q_6_check_box_answer_2"/>

            <CheckBox
                android:id="@+id/q_6_check_box_3"
                style="@style/CheckBoxStyle"
                android:text="@string/q_6_check_box_answer_3"/>

            <CheckBox
                android:id="@+id/q_6_check_box_4"
                style="@style/CheckBoxStyle"
                android:text="@string/q_6_check_box_answer_4"/>
        </LinearLayout>

        <!-- Question 7 -->
        <LinearLayout
            android:id="@+id/q_7"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_7_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_7_header"/>

            <TextView
                android:id="@+id/q_7_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_7_question"/>

            <EditText
                android:id="@+id/q_7_answer_edit_text"
                style="@style/EditTextStyle"/>
        </LinearLayout>

        <!-- Question 8 -->
        <LinearLayout
            android:id="@+id/q_8"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_8_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_8_header"/>

            <TextView
                android:id="@+id/q_8_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_8_question"/>

            <RadioGroup
                android:id="@+id/q_8_answer_radio_group"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/q_8_radio_button_1"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_8_radio_button_answer_1"/>

                <RadioButton
                    android:id="@+id/q_8_radio_button_2"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_8_radio_button_answer_2"/>

                <RadioButton
                    android:id="@+id/q_8_radio_button_3"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_8_radio_button_answer_3"/>

                <RadioButton
                    android:id="@+id/q_8_radio_button_4"
                    style="@style/RadioButtonStyle"
                    android:text="@string/q_8_radio_button_answer_4"/>
            </RadioGroup>
        </LinearLayout>

        <!-- Question 9 -->
        <LinearLayout
            android:id="@+id/q_9"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_9_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_9_header"/>

            <TextView
                android:id="@+id/q_9_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_9_question"/>

            <CheckBox
                android:id="@+id/q_9_check_box_1"
                style="@style/CheckBoxStyle"
                android:text="@string/q_9_check_box_answer_1"/>

            <CheckBox
                android:id="@+id/q_9_check_box_2"
                style="@style/CheckBoxStyle"
                android:text="@string/q_9_check_box_answer_2"/>

            <CheckBox
                android:id="@+id/q_9_check_box_3"
                style="@style/CheckBoxStyle"
                android:text="@string/q_9_check_box_answer_3"/>

            <CheckBox
                android:id="@+id/q_9_check_box_4"
                style="@style/CheckBoxStyle"
                android:text="@string/q_9_check_box_answer_4"/>
        </LinearLayout>

        <!-- Question 10 -->
        <LinearLayout
            android:id="@+id/q_10"
            style="@style/LinearLayoutQuestionStyle">

            <TextView
                android:id="@+id/q_10_header"
                style="@style/QuestionHeaderStyle"
                android:text="@string/q_10_header"/>

            <TextView
                android:id="@+id/q_10_question"
                style="@style/QuestionSubHeaderStyle"
                android:text="@string/q_10_question"/>

            <EditText
                android:id="@+id/q_10_answer_edit_text"
                style="@style/EditTextStyle"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_answer_button"
            style="@style/AnswerButtonStyle"
            android:onClick="displayScore"/>
    </LinearLayout>
</ScrollView>

